Update h2 text in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Day one just uploading text</h1>
-    <h2>Day two just uploading text</h2>
+    <h2>Day two just uploading text2</h2>
 
     <script src="script.js"></script>
 </body>
