--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Day one just uploading text</h1>
     <h2>Day two just uploading text2</h2>
+    <h3>day three of staying active</h3>
 
     <script src="script.js"></script>
 </body>
