Add fourth day header to index.htmla

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Day one just uploading text</h1>
     <h2>Day two just uploading text2</h2>
     <h3>day three of staying active</h3>
+    <h4>day forth of staying active</h4>
 
     <script src="script.js"></script>
 </body>
