Add sixth day header to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>day three of staying active</h3>
     <h4>day forth of staying active</h4>
     <h5>day fifth of staying active</h5>
+     <h5>day sixth of staying active</h5>
 
     <script src="script.js"></script>
 </body>
