Add header for seventh day of staying active

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h4>day forth of staying active</h4>
     <h5>day fifth of staying active</h5>
      <h5>day sixth of staying active</h5>
+    <h6>day seventh of staying active</h6>
 
     <script src="script.js"></script>
 </body>
