Add missing h3 header for day three

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Day two just uploading text2</h2>
     <h3>day three of staying active</h3>
     <h4>day forth of staying active</h4>
+    <h3>day three</h3>
     <h5>day fifth of staying active</h5>
      <h5>day sixth of staying active</h5>
     <h6>day seventh of staying active</h6>
